--- a/source/styles/bgvideo.css
+++ b/source/styles/bgvideo.css
@@ -4,11 +4,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-        align-items: safe;
-        
-    }
-
-
+        align-items: safe;}
 .bg-video video {
     height: 70vh;
      width: 100%;
@@ -16,11 +12,7 @@
      top: 0;
      left: 0;
      object-fit: cover;
-     z-index: 1;
- }
-
-
- .video-text {
+     z-index: 1;}
+.video-text {
 color: aquamarine;
-z-index: 2;
- }
+z-index: 2;}
